# balena-fin-coprocessor-sdk

./: CMakeLists.txt  README.md
balena/: Changes-balena.txt  balena.cmake
balena/config/: ble-configuration.h
balena/inc/: Serial.h  balena.h  power.h
balena/src/: Serial.cpp  power.cpp
bluetooth/: bluetooth.cmake
bluetooth/ble_stack/inc/soc/: bg_version.h
emdrv/dmadrv/inc/: dmadrv.h
tests/: CMakeLists.txt  Makefile  test.cpp
toolchain/: main.cmake
